version/0.31/_sources/api/solver/_autosummary/settings/zonal_models.rst.txt
:orphan:

.. _zonal_models:

zonal_models
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.zonal_models
    :show-inheritance:

.. rubric:: Attributes

======================================================   ======================================

Attribute                                                                               Summary

======================================================   ======================================
:ref:`zonal_models <zonal_models_1>`                                              Zonal Models.

:ref:`zonal_flow <zonal_flow>`                                                      Zonal Flow.

:ref:`zonal_flow_spec <zonal_flow_spec>`                     Pressure-Velocity Coupling Scheme.

:ref:`zonal_pseudo_time_spec <zonal_pseudo_time_spec>`                      Pseudo Time Method.

======================================================   ======================================

.. rubric:: Included in:

======================================   ======================================

Parent                                                                  Summary

======================================   ======================================
:ref:`fluid_1_child <fluid_1_child>`              'child_object_type' of fluid.

:ref:`phase_child <phase_child>`                  'child_object_type' of phase.

:ref:`settings_4 <settings_4>`               Domain name to define settings on.

:ref:`phase_27_child <phase_27_child>`            'child_object_type' of phase.

======================================   ======================================

